# javascript-globals

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  dprint.json  justfile  package.json  pnpm-lock.yaml
.github/workflows/: auto-update.yml  ci.yml  release.yml  zizmor.yml
src/: lib.rs
tests/: main.rs
xtask/: Cargo.toml  template.hbs
xtask/src/: main.rs  template.rs
