[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
handlebars = "6.3.1"
lazy_static = "1.5.0"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
ureq = { version = "3.0.5", default-features = false, features = ["json", "rustls"] }
